--- a/SimpleCalc/app/src/main/res/layout/activity_main.xml
+++ b/SimpleCalc/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,16 @@
             android:onClick="onMul"
             android:text="@string/mul_operation_text"/>
 
+        <Button
+            android:id="@+id/operation_power"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/operation_sub_btn"
+            android:layout_toEndOf="@id/operation_mul_btn"
+            android:layout_toRightOf="@id/operation_sub_btn"
+            android:onClick="onPow"
+            android:text="@string/power_operation_text" />
+
     </RelativeLayout>
 
     <TextView
